# src/application/query/dto.go
@@ -1,0 +1,16 @@
+package query
+
+type (
+	GetOrdersDto struct {
+		OrderViews []OrderView
+	}
+
+	GetOrderDto struct {
+		OrderView OrderView
+	}
+
+	OrderView struct {
+		Id     string
+		Status int
+	}
+)
