# src/application/query/model.go
@@ -1,14 +1,0 @@
-package query
-
-type GetOrdersModel struct {
-	OrderViews []OrderView
-}
-
-type GetOrderModel struct {
-	OrderView OrderView
-}
-
-type OrderView struct {
-	Id     string
-	Status int
-}
